<resources>
    <string name="app_name">Tippy</string>
    <string name="twoDecimalsOnFloat">%.2f</string>
    <string name="made_in_california_by_gdeb">Made in California ❤️ by GdeB</string>
    <string name="base">Base</string>
    <string name="tip">Tip</string>
    <string name="total">Total</string>
    <string name="total_each">Total each</string>
    <string name="bill_amount">Bill amount</string>
    <string name="participants">Participants</string>
    <string name="base_Amount_AutofillHints">Total amount, including taxes</string>
</resources>