<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- Footer text -->
    <TextView
        android:id="@+id/tvFooter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:fontFamily="sans-serif-thin"
        android:text="@string/made_in_california_by_gdeb"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Views on the left side -->
    <TextView
        android:id="@+id/tvBaseLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="48dp"
        android:text="@string/base"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTipPercentLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        tools:text="24%"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/tvBaseLabel"
        app:layout_constraintEnd_toEndOf="@+id/tvBaseLabel" />

    <TextView
        android:id="@+id/tvTipLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/tip"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintTop_toBottomOf="@+id/tvTipPercentLabel"
        app:layout_constraintEnd_toEndOf="@+id/tvBaseLabel" />

    <TextView
        android:id="@+id/tvTotalLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/total"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintTop_toBottomOf="@+id/tvTipLabel"
        app:layout_constraintEnd_toEndOf="@+id/tvBaseLabel" />

    <TextView
        android:id="@+id/tvNumberOfParticipantsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/participants"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintTop_toBottomOf="@+id/tvTotalLabel"
        app:layout_constraintEnd_toEndOf="@+id/tvBaseLabel" />

    <TextView
        android:id="@+id/tvTotalPerParticipantLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/total_each"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintTop_toBottomOf="@+id/tvNumberOfParticipantsLabel"
        app:layout_constraintEnd_toEndOf="@+id/tvBaseLabel" />

    <!-- Views on the right side -->
    <EditText
        android:id="@+id/etBaseAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:ems="8"
        android:hint="@string/bill_amount"
        android:inputType="numberDecimal"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/tvBaseLabel"
        app:layout_constraintTop_toTopOf="@id/tvBaseLabel"
        app:layout_constraintBottom_toBottomOf="@id/tvBaseLabel"
        android:autofillHints="@string/base_Amount_AutofillHints" />

    <SeekBar
        android:id="@+id/sbTip"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:max="30"
        app:layout_constraintBottom_toBottomOf="@+id/tvTipPercentLabel"
        app:layout_constraintStart_toStartOf="@+id/etBaseAmount"
        app:layout_constraintTop_toTopOf="@+id/tvTipPercentLabel" />

    <TextView
        android:id="@+id/tvTipAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="@+id/tvTipLabel"
        app:layout_constraintStart_toStartOf="@+id/sbTip"
        app:layout_constraintTop_toTopOf="@+id/tvTipLabel" />

    <TextView
        android:id="@+id/tvTotalAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="@+id/tvTotalLabel"
        app:layout_constraintStart_toStartOf="@+id/tvTipAmount"
        app:layout_constraintTop_toTopOf="@+id/tvTotalLabel" />

    <TextView
        android:id="@+id/tvTipDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/sbTip"
        app:layout_constraintTop_toBottomOf="@+id/sbTip" />

    <EditText
        android:id="@+id/etNumberOfParticipants"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="8"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="@+id/tvNumberOfParticipantsLabel"
        app:layout_constraintStart_toStartOf="@+id/tvTotalAmount"
        app:layout_constraintTop_toTopOf="@+id/tvNumberOfParticipantsLabel"
        android:autofillHints="How many people will share the bill?" />

    <TextView
        android:id="@+id/tvTotalPerParticipant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="@+id/tvTotalPerParticipantLabel"
        app:layout_constraintStart_toStartOf="@+id/etNumberOfParticipants"
        app:layout_constraintTop_toTopOf="@+id/tvTotalPerParticipantLabel" />

</androidx.constraintlayout.widget.ConstraintLayout>